--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~14.1.6",
     "firebase": "^11.9.0",
+    "lucide-react": "^0.513.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
