--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "server": "nodemon backend/server.js"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -17,6 +18,8 @@
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/stack": "^7.3.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "expo": "^54.0.13",
     "expo-application": "~7.0.7",
     "expo-auth-session": "~7.0.8",
@@ -25,11 +28,16 @@
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.8",
+    "express": "^5.1.0",
     "firebase": "^11.9.0",
+    "firebase-admin": "^13.5.0",
     "lucide-react": "^0.513.0",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0"
@@ -37,7 +45,8 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@react-native-community/cli": "latest",
-    "tailwindcss": "^4.1.8"
+    "nodemon": "^3.1.10",
+    "tailwindcss": "^4.1.15"
   },
   "private": true
 }
