--- a/package.json
+++ b/package.json
@@ -11,21 +11,34 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-firebase/app": "^22.4.0",
-    "@react-native-firebase/auth": "^22.4.0",
-    "@react-native-firebase/storage": "^22.4.0",
-    "@react-native-google-signin/google-signin": "^14.0.2",
+    "@react-native-community/blur": "^4.4.1",
+    "@react-native-firebase/app": "^23.5.0",
+    "@react-native-firebase/auth": "^23.5.0",
+    "@react-native-firebase/messaging": "^23.5.0",
+    "@react-native-firebase/storage": "^23.5.0",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/stack": "^7.3.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
     "expo": "^54.0.13",
     "expo-application": "~7.0.7",
     "expo-auth-session": "~7.0.8",
+    "expo-av": "^16.0.7",
+    "expo-blur": "~15.0.7",
+    "expo-camera": "~17.0.9",
+    "expo-constants": "^18.0.10",
     "expo-crypto": "~15.0.7",
     "expo-dev-client": "~6.0.15",
+    "expo-device": "~8.0.9",
+    "expo-file-system": "~19.0.19",
+    "expo-image-manipulator": "~14.0.7",
+    "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
+    "expo-media-library": "~18.2.0",
+    "expo-notifications": "^0.32.13",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.8",
     "express": "^5.1.0",
@@ -35,12 +48,19 @@
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-blob-util": "^0.23.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-pdf": "^7.0.3",
+    "react-native-qrcode-svg": "^6.3.20",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-svg": "^15.15.0",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-view-shot": "^4.0.3",
+    "react-native-webview": "13.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
